# rust-sudoku-solver

./: Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
benchmark/: .gitignore  Cargo.toml  makefile  run.csv
benchmark/data/: old_record.csv  record.csv
benchmark/docs/: stats.md
benchmark/src/: main.rs
benchmark/src/data/: datapoint.rs  mod.rs
benchmark/src/setup/: util.rs
docs/fast_solver/: fast-generator.csv  fast-solver.md  old-generator.csv
docs/mark_occupy/: mark_occupy.md
docs/mark_trail_and_error/: README.md
lib/: Cargo.toml  makefile
lib/src/: lib.rs  test.rs
lib/src/generators/: generators.rs
lib/src/grid/: cell.rs  cell_collection.rs  column.rs  constants.rs  coords.rs  flags.rs  format.rs  grid.rs  grid_mask.rs  mark.rs  mod.rs  possibility.rs  queries.rs  row.rs  searchable.rs  slice.rs  square.rs  test_util.rs  utility.rs
lib/src/solvers/: determined_solver.rs  fast_solver.rs  is_solved.rs  mark_area_count.rs  mark_occupy.rs  mark_reset.rs  mark_shapes.rs  mark_simple.rs  mark_survivor.rs  mark_trail_and_error.rs  mod.rs  solver.rs  solver_manager.rs  util.rs  validator.rs
lib/src/test/: amount.rs  mod.rs  possible.rs  scenarios.rs  specifics.rs  specifics_manual.rs  squares.rs  util.rs
server/: Cargo.toml
server/src/: main.rs
server/src/data/: grid.rs
server/src/routes/: solver.rs
server/src/utils/: env.rs
static/: index.html  main.js  style.css
wasm/: Cargo.toml  makefile
wasm/src/: lib.rs
wasm/src/sudoku/: cells.rs
wasm/static/: index.html  main.js  style.css
